--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 main {
     background-color: white;
 }
+
+header {
+    background-color: #73BFBF;
+    border: solid red 1px;
+    display: inline-flex;
+    margin: auto;
+    padding: auto;
+}
+
+
+
+
+footer {
+    background-color: #FA6D35;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+}
+
+div {
+    display: inline-flex;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding-right: 2px;
+    overflow: hidden;
+    background-color: transparent;
+}
+
+li {
+    float: left;
+}
+
+li {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+}
