--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-main {
-    background-color: white;
-}
-
 header {
     background-color: #73BFBF;
     border: solid red 1px;
@@ -10,7 +6,13 @@ header {
     padding: auto;
 }
 
+main {
+    background-color: white;
+}
 
+h1 {
+    align-content: center;
+}
 
 
 footer {
@@ -35,9 +37,6 @@ ul {
 
 li {
     float: left;
-}
-
-li {
     display: block;
     color: white;
     text-align: center;
