--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ main {
 
 .container-solutions {
     display: flex;
-    flex-direction:row;
+    flex-direction: column;
     justify-content: space-between;
     margin: 0 300px 0 300px;
 
@@ -60,17 +60,26 @@ main {
 .container-solutions img {
     width: 200px;
 }
+.Onetitle{
+    display: flex;
+    flex-direction: row;
+}
+
+.TitleDelivery {
+
+    padding-left: 30 px;
+}
 
 .solutions-delivery {
     display: flex;
-    flex-direction: column;
-    width: 400px;
+    flex-direction: row;
+    width: 450px;
     align-items: center;
 }
 
 .solutions-plug {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 400px;
     align-items: center;
 }
