--- a/style.css
+++ b/style.css
@@ -10,11 +10,14 @@ header {
 body {
     margin: 0;
     display: grid;
+
 }
 
 main {
     background-color: white;
+
 }
+
 
 .container-about {
     display: flex;
@@ -31,7 +34,11 @@ main {
     background-color: #73BFBF;
     width: 400px;
     margin: 0 0 0 300px;
+    font-family: roboto-bold, roboto, sans-serif;
+    font-weight: 100px;
+    font-size: medium;
 }
+
 
 .about-img {
     display: flex;
@@ -69,7 +76,7 @@ main {
     flex-direction: column;
     align-items: center;
     width: 400px;
-    justify-content:space-around;
+    justify-content: space-around;
     text-align: center;
     margin: 0 50px 0 50px;
 }
@@ -96,36 +103,50 @@ main {
     text-align: center;
     justify-content: center;
     margin: 0 50px 0 50px;
-}  
+}
 
 
 h1 {
     display: flex;
     flex-direction: column;
+    color: #FA6D35;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 
 p {
-    font-family: 'Roboto', sans-serif;
+
+    font-size: 20px;
+    padding: auto;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 a {
     text-decoration: none;
+    color: antiquewhite;
+
+
 }
 
+a:hover {
+    color: #FA6D35;
+}
 
 ul {
     list-style-type: none;
@@ -133,15 +154,19 @@ ul {
     padding-right: 2px;
     overflow: hidden;
     background-color: transparent;
+
 }
 
 li {
     float: left;
     display: block;
-    color: white;
+    color: antiquewhite;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: larger;
+
 }
 
 
